examples/test/testpolicy6322.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6322
  namespace: namespace99
spec:
  podSelector:
    matchLabels:
      key28: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value4
          key48: value34
      podSelector:
        matchLabels:
          key7: value45
          key31: value45
